hard-gists/1639941/run.log
=== Docker Run Log for 1639941 ===
Started at: Mi 29. Okt 12:21:33 CET 2025

[2025-10-29 12:21:34] START: Running container for 1639941
[2025-10-29 12:21:34] SUCCESS: Container fbac2daa6eec5610348e1bfe5b843fa5e7c9b208a09b0de0cfa2a41a3798cd2e started for 1639941
=== Container logs for 1639941 ===
  File "/snippet.py", line 44
    raise IOError, "Missing torrent file: %s" % filename
                 ^
SyntaxError: invalid syntax
=== End of logs for 1639941 ===
[2025-10-29 12:21:36] INFO: Container fbac2daa6eec5610348e1bfe5b843fa5e7c9b208a09b0de0cfa2a41a3798cd2e has stopped
